@@ -1,3 +1,6 @@
+2006-12-25  paul  <ephraim_owns@hotmail.com>
+	* Added hitch to gnome_sudoku.py to import PyGTK before GTK.
+
 2006-12-17  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
 	* src/lib/defaults.py.in:
